--- a/shop/templates/product.html
+++ b/shop/templates/product.html
@@ -45,7 +45,7 @@
     <div class="popup-content">
         <span class="popup-close" onclick="closePopup('delivery-popup')">&times;</span>
         <h3>Order Delivery</h3>
-        <p>Call us at: <a href="tel:+254798591299" class="phone-number">+254 798 591 299</a></p>
+        <p>Call us at: <a href="tel:+254798591299" class="phone-number">+254 798 591 299</a>or <a href="tel:+254712050439" class="phone-number">+254 712 050 439</p> 
         <p>Or send a WhatsApp message:</p>
         <a href="https://wa.me/254798591299?text=Hello%20Technologent,%20I%20would%20like%20to%20place%20an%20order.%20My%20name%20is%20[Your%20Name]%20and%20my%20address%20is%20[Your%20Address]." target="_blank" class="btn btn-whatsapp">Send WhatsApp Message</a>
     </div>
