--- a/shop/templates/navbar.html
+++ b/shop/templates/navbar.html
@@ -57,11 +57,11 @@
   <div class="notification-toast" data-toast>
 
     <button class="toast-close-btn" data-toast-close>
-      <ion-icon name="close-outline"></ion-icon>
+      <img src="{% static 'assets/images/cancel.gif' %}" alt="logo" width="24" height="24">
     </button>
 
     <div class="toast-banner">
-      <img src="{% static 'assets/images/logo/logo.png' %}" alt="logo" width="80" height="70">
+      <img src="{% static 'assets/images/hi.gif' %}" alt="logo" width="80" height="70">
     </div>
 
     <div class="toast-detail">
@@ -137,16 +137,17 @@
         <a href="#" class="header-logo">
           <img src="{% static 'assets/images/logo/logo.png' %}" alt="Technologent's logo" width="200" height="150">
         </a>
-
+        
         <div class="header-search-container">
-
-          <input type="search" name="search" class="search-field" placeholder="Enter your product name...">
-
-          <button class="search-btn">
-            <ion-icon name="search-outline"></ion-icon>
-          </button>
-
-        </div>
+          <form action="{% url 'product_search' %}" method="GET">
+              {% csrf_token %}
+              <input type="search" name="search" class="search-field" placeholder="Enter your product name...">
+              <button type="submit" class="search-btn">
+                <img src="{% static 'assets/images/search.gif' %}" alt="" width="26" height="26">
+              </button>
+          </form>
+      </div>
+        
 
         <div class="header-user-actions">
 
